[gd_scene load_steps=7 format=3 uid="uid://v6vkb7hwh020"]

[ext_resource type="Script" uid="uid://fxd3u7xiyxie" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="Texture2D" uid="uid://if1jcfwc0t5l" path="res://assets/Key/gdb-keyboard-2.png" id="2_kukqi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5d2l8"]
atlas = ExtResource("2_kukqi")
region = Rect2(32, 576, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l7mv"]
atlas = ExtResource("2_kukqi")
region = Rect2(64, 576, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4r4p"]
atlas = ExtResource("2_kukqi")
region = Rect2(96, 576, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1s2dm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d2l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l7mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4r4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l7mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d2l8")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myx47")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.374139, 0.374139, 0.374139, 1)

[node name="ResumeButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -42.0
offset_right = 15.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="ResumeAnim" type="AnimatedSprite2D" parent="ResumeButton"]
position = Vector2(15, 9)
sprite_frames = SubResource("SpriteFrames_1s2dm")
frame = 4
frame_progress = 1.0

[node name="Label" type="Label" parent="ResumeButton"]
layout_mode = 0
offset_left = 3.0
offset_top = 5.0
offset_right = 27.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 6
text = "resume"

[node name="RestartButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -9.0
offset_right = 15.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="RestartAnim" type="AnimatedSprite2D" parent="RestartButton"]
position = Vector2(15, 9)
sprite_frames = SubResource("SpriteFrames_1s2dm")
frame = 4
frame_progress = 1.0

[node name="Label2" type="Label" parent="RestartButton"]
layout_mode = 0
offset_left = 2.0
offset_top = 5.0
offset_right = 30.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 6
text = "restart"

[node name="QuitButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 22.0
offset_right = 15.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="QuitAnim" type="AnimatedSprite2D" parent="QuitButton"]
position = Vector2(15, 9)
sprite_frames = SubResource("SpriteFrames_1s2dm")
frame = 4
frame_progress = 1.0

[node name="Label3" type="Label" parent="QuitButton"]
layout_mode = 0
offset_left = 7.0
offset_top = 4.0
offset_right = 23.0
offset_bottom = 13.0
theme_override_font_sizes/font_size = 6
text = "quit"

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
